fix conditional glXSwapInterval usage

and cleanup profiling relics

REVIEW: 105632
BUG: 303397
(cherry picked from commit 0babc455aea4f5099a4f829668160bda3ef68a28)